--- a/Source/Custom Device Support/Tests/System/Deployment/targets.ini
+++ b/Source/Custom Device Support/Tests/System/Deployment/targets.ini
@@ -1,6 +1,5 @@
 [Supported Targets]
-Windows = localhost
 Linux64PXI = vs-eco-slave-8880
 
 [Active Configuration]
-Platform = Windows
+Platform = Linux64PXI
