--- a/build.toml
+++ b/build.toml
@@ -64,6 +64,7 @@ package_output_dir = 'Source\Built'
 
 [package.payload_map]
 'Source\\Built\\Ballard' = 'documents\National Instruments\NI VeriStand {veristand_version}\Custom Devices\Ballard'
+'Source\\Built\\Errors' = 'ni-paths-NISHAREDDIR\LabVIEW Run-Time\{veristand_version}\errors\English'
 
 [[package]]
 type = 'nipkg'
@@ -72,3 +73,4 @@ package_output_dir = 'Source\Built'
 
 [package.payload_map]
 'Source\\Built\\Scripting' = 'ni-paths-LV{veristand_version}DIR\vi.lib\addons\VeriStand Custom Device Scripting APIs\Ballard MIL-STD-1553'
+'Source\\Built\\Errors' = 'ni-paths-LV{veristand_version}DIR\resource\errors\English'
