--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -73,15 +73,15 @@ stages:
         - controlFileName: 'control_custom_device'
           payloadMaps:
             - installLocation: 'documents\National Instruments\NI VeriStand $(lvVersion)\Custom Devices\Ballard'
-              payloadLocation: 'Ballard'
+              payloadLocation: 'Source\Built\Ballard'
             - installLocation: 'ni-paths-NISHAREDDIR$(nipkgx64suffix)\LabVIEW Run-Time\$(lvVersion)\errors\English'
-              payloadLocation: 'Errors'
+              payloadLocation: 'Source\Built\Errors'
 
         - controlFileName: 'control_scripting'
           payloadMaps:
             - installLocation: 'ni-paths-LV$(lvVersion)DIR$(nipkgx64suffix)\vi.lib\addons\VeriStand Custom Device Scripting APIs\Ballard MIL-STD-1553'
-              payloadLocation: 'Scripting'
+              payloadLocation: 'Source\Built\Scripting'
             - installLocation: 'ni-paths-LV$(lvVersion)DIR$(nipkgx64suffix)\examples\NI VeriStand Custom Devices\Ballard MIL-STD-1553'
-              payloadLocation: 'Scripting Examples'
+              payloadLocation: 'Source\Built\Scripting Examples'
             - installLocation: 'ni-paths-LV$(lvVersion)DIR$(nipkgx64suffix)\resource\errors\English'
-              payloadLocation: 'Errors'
+              payloadLocation: 'Source\Built\Errors'
