--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,10 @@ stages:
   - template: azure-templates/stages.yml@niveristand-custom-device-build-tools
     parameters:
       lvVersionsToBuild:
+        - version: '2023'
+          bitness: '64bit'
+        - version: '2024'
+          bitness: '64bit'
         - version: '2025'
           bitness: '64bit'
 
